// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportList expect to render empty list 1`] = `
<withRouter(ReportListPage)
  showBreadcrumb={false}
  title="Reports"
>
  <LoadingState
    loading={false}
    placeholder={
      <Skeleton
        size="lg"
      />
    }
  >
    <Bullseye
      className=""
      component="div"
    >
      <EmptyState
        className=""
        variant="large"
      >
        <p>
          <EmptyStateIcon
            className=""
            icon={[Function]}
          />
        </p>
        <Title
          size="lg"
        >
          No reports found
        </Title>
        <EmptyStateBody
          className=""
        >
          There are no reports processed yet.
        </EmptyStateBody>
        <Button
          aria-label={null}
          className=""
          component={[Function]}
          isActive={false}
          isBlock={false}
          isDisabled={false}
          isFocus={false}
          isHover={false}
          isInline={false}
          to="/upload"
          type="button"
          variant="primary"
        >
          Upload
        </Button>
      </EmptyState>
    </Bullseye>
  </LoadingState>
</withRouter(ReportListPage)>
`;

exports[`ReportList expect to render list 1`] = `
<withRouter(ReportListPage)
  showBreadcrumb={false}
  title="Reports"
>
  <LoadingState
    loading={false}
    placeholder={
      <Skeleton
        size="lg"
      />
    }
  >
    <TableToolbar
      isFooter={false}
    >
      <ToolbarGroup
        className={null}
      >
        <ToolbarItem
          className={null}
        >
          <Button
            aria-label={null}
            className=""
            component={[Function]}
            isActive={false}
            isBlock={false}
            isDisabled={false}
            isFocus={false}
            isHover={false}
            isInline={false}
            to="/upload"
            type="button"
            variant="primary"
          >
            Upload
          </Button>
        </ToolbarItem>
      </ToolbarGroup>
    </TableToolbar>
    <Table
      aria-label="Reports list"
      borders={true}
      cells={
        Array [
          Object {
            "props": Object {},
            "title": "Report Id",
          },
          Object {
            "props": Object {},
            "title": "Customer Id",
          },
          Object {
            "props": Object {
              "className": "pf-u-text-align-center",
            },
            "title": "File name",
          },
          "",
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      onCollapse={null}
      onExpand={null}
      rowLabeledBy="simple-node"
      rows={
        Array [
          Array [
            Object {
              "title": 36,
            },
            Object {
              "title": "123456",
            },
            Object {
              "title": "file1.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/36"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
          Array [
            Object {
              "title": 37,
            },
            Object {
              "title": "654321",
            },
            Object {
              "title": "file2.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/37"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
        ]
      }
      variant={null}
    >
      <TableHeader
        className=""
      />
      <TableBody
        className=""
        onRowClick={[Function]}
        rowKey="id"
      />
    </Table>
  </LoadingState>
</withRouter(ReportListPage)>
`;

exports[`ReportList expect to render loading list 1`] = `
<withRouter(ReportListPage)
  showBreadcrumb={false}
  title="Reports"
>
  <LoadingState
    loading={true}
    placeholder={
      <Skeleton
        size="lg"
      />
    }
  >
    <TableToolbar
      isFooter={false}
    >
      <ToolbarGroup
        className={null}
      >
        <ToolbarItem
          className={null}
        >
          <Button
            aria-label={null}
            className=""
            component={[Function]}
            isActive={false}
            isBlock={false}
            isDisabled={false}
            isFocus={false}
            isHover={false}
            isInline={false}
            to="/upload"
            type="button"
            variant="primary"
          >
            Upload
          </Button>
        </ToolbarItem>
      </ToolbarGroup>
    </TableToolbar>
    <Table
      aria-label="Reports list"
      borders={true}
      cells={
        Array [
          Object {
            "props": Object {},
            "title": "Report Id",
          },
          Object {
            "props": Object {},
            "title": "Customer Id",
          },
          Object {
            "props": Object {
              "className": "pf-u-text-align-center",
            },
            "title": "File name",
          },
          "",
        ]
      }
      className=""
      contentId="expanded-content"
      dropdownDirection="down"
      dropdownPosition="right"
      expandId="expandable-toggle"
      gridBreakPoint="grid-md"
      onCollapse={null}
      onExpand={null}
      rowLabeledBy="simple-node"
      rows={
        Array [
          Array [
            Object {
              "title": 36,
            },
            Object {
              "title": "123456",
            },
            Object {
              "title": "file1.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/36"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
          Array [
            Object {
              "title": 37,
            },
            Object {
              "title": "654321",
            },
            Object {
              "title": "file2.json",
            },
            Object {
              "title": <Button
                aria-label={null}
                className=""
                component={[Function]}
                isActive={false}
                isBlock={false}
                isDisabled={false}
                isFocus={false}
                isHover={false}
                isInline={false}
                to="/reports/37"
                type="button"
                variant="primary"
              >
                View
              </Button>,
            },
          ],
        ]
      }
      variant={null}
    >
      <TableHeader
        className=""
      />
      <TableBody
        className=""
        onRowClick={[Function]}
        rowKey="id"
      />
    </Table>
  </LoadingState>
</withRouter(ReportListPage)>
`;
